<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextUserInput"
        style="@style/UserInputEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/calculator_outer_margins"
        android:layout_marginTop="@dimen/calculator_outer_margins"
        android:layout_marginEnd="@dimen/calculator_outer_margins"
        android:maxLines="3"
        android:minHeight="@dimen/calculator_input_min_height"
        android:padding="@dimen/calculator_input_padding"
        android:textSize="@dimen/calculator_input_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="2*3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textIntermediateResult"
        style="@style/IntermediateResultTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/calculator_button_margins"
        android:padding="@dimen/calculator_intermediate_result_padding"
        android:textSize="@dimen/calculator_intermediate_result_text_size"
        app:layout_constraintEnd_toEndOf="@id/editTextUserInput"
        app:layout_constraintStart_toStartOf="@+id/editTextUserInput"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserInput"
        tools:text="6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonHistory"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/calculator_button_margins"
        android:layout_marginEnd="@dimen/calculator_button_margins"
        android:layout_marginBottom="@dimen/calculator_button_margins"
        android:text="@string/buttonHistoryText"
        android:textSize="@dimen/calculator_text_button_text_size"
        app:layout_constraintBottom_toTopOf="@id/buttonSeven"
        app:layout_constraintEnd_toStartOf="@id/buttonBracketsOpen"
        app:layout_constraintStart_toStartOf="@+id/textIntermediateResult"
        app:layout_constraintTop_toBottomOf="@+id/textIntermediateResult" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonBracketsOpen"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/calculator_button_margins"
        android:text="@string/buttonBracketsOpenText"
        android:textSize="@dimen/calculator_expression_button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/buttonHistory"
        app:layout_constraintEnd_toStartOf="@+id/buttonBracketsClose"
        app:layout_constraintStart_toEndOf="@+id/buttonHistory"
        app:layout_constraintTop_toTopOf="@+id/buttonHistory" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonBracketsClose"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/calculator_button_margins"
        android:text="@string/buttonBracketsCloseText"
        android:textSize="@dimen/calculator_expression_button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBracketsOpen"
        app:layout_constraintEnd_toStartOf="@+id/buttonClear"
        app:layout_constraintStart_toEndOf="@+id/buttonBracketsOpen"
        app:layout_constraintTop_toTopOf="@+id/buttonBracketsOpen" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonClear"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/calculator_button_margins"
        android:text="@string/buttonClearText"
        android:textSize="@dimen/calculator_expression_button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBracketsClose"
        app:layout_constraintEnd_toStartOf="@+id/buttonBackspace"
        app:layout_constraintStart_toEndOf="@+id/buttonBracketsClose"
        app:layout_constraintTop_toTopOf="@+id/buttonBracketsClose" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonBackspace"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonBackspaceText"
        android:textSize="@dimen/calculator_expression_button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/buttonClear"
        app:layout_constraintEnd_toEndOf="@id/textIntermediateResult"
        app:layout_constraintStart_toEndOf="@+id/buttonClear"
        app:layout_constraintTop_toTopOf="@+id/buttonClear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSeven"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/calculator_button_margins"
        android:text="@string/buttonSevenText"
        android:textSize="@dimen/calculator_digit_button_text_size"
        app:layout_constraintBottom_toTopOf="@id/buttonFour"
        app:layout_constraintEnd_toEndOf="@+id/buttonHistory"
        app:layout_constraintStart_toStartOf="@+id/buttonHistory"
        app:layout_constraintTop_toBottomOf="@id/buttonHistory" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEight"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonEightText"
        android:textSize="@dimen/calculator_digit_button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSeven"
        app:layout_constraintEnd_toEndOf="@+id/buttonBracketsOpen"
        app:layout_constraintStart_toStartOf="@+id/buttonBracketsOpen"
        app:layout_constraintTop_toTopOf="@+id/buttonSeven" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNine"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonNineText"
        android:textSize="@dimen/calculator_digit_button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/buttonEight"
        app:layout_constraintEnd_toEndOf="@+id/buttonBracketsClose"
        app:layout_constraintStart_toStartOf="@+id/buttonBracketsClose"
        app:layout_constraintTop_toTopOf="@+id/buttonEight" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDivide"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonDivideText"
        android:textSize="@dimen/calculator_expression_button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/buttonNine"
        app:layout_constraintEnd_toEndOf="@+id/buttonClear"
        app:layout_constraintStart_toStartOf="@+id/buttonClear"
        app:layout_constraintTop_toTopOf="@+id/buttonNine" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSQRT"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonSQRTText"
        android:textSize="@dimen/calculator_expression_button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDivide"
        app:layout_constraintEnd_toEndOf="@+id/buttonBackspace"
        app:layout_constraintStart_toStartOf="@+id/buttonBackspace"
        app:layout_constraintTop_toTopOf="@+id/buttonDivide" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFour"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/calculator_button_margins"
        android:text="@string/buttonFourText"
        android:textSize="@dimen/calculator_digit_button_text_size"
        app:layout_constraintBottom_toTopOf="@id/buttonOne"
        app:layout_constraintEnd_toEndOf="@+id/buttonSeven"
        app:layout_constraintStart_toStartOf="@+id/buttonSeven"
        app:layout_constraintTop_toBottomOf="@+id/buttonSeven" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFive"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonFiveText"
        android:textSize="@dimen/calculator_digit_button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/buttonFour"
        app:layout_constraintEnd_toEndOf="@+id/buttonEight"
        app:layout_constraintStart_toStartOf="@+id/buttonEight"
        app:layout_constraintTop_toTopOf="@+id/buttonFour" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSix"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonSixText"
        android:textSize="@dimen/calculator_digit_button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/buttonFive"
        app:layout_constraintEnd_toEndOf="@+id/buttonNine"
        app:layout_constraintStart_toStartOf="@+id/buttonNine"
        app:layout_constraintTop_toTopOf="@+id/buttonFive" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMultiply"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonMultiplyText"
        android:textSize="@dimen/calculator_expression_button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSix"
        app:layout_constraintEnd_toEndOf="@+id/buttonDivide"
        app:layout_constraintStart_toStartOf="@+id/buttonDivide"
        app:layout_constraintTop_toTopOf="@+id/buttonSix" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPowered"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonPoweredText"
        android:textSize="@dimen/calculator_text_button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/buttonMultiply"
        app:layout_constraintEnd_toEndOf="@+id/buttonSQRT"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonSQRT"
        app:layout_constraintTop_toTopOf="@+id/buttonMultiply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonOne"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/calculator_button_margins"
        android:text="@string/buttonOneText"
        android:textSize="@dimen/calculator_digit_button_text_size"
        app:layout_constraintBottom_toTopOf="@id/buttonZero"
        app:layout_constraintEnd_toEndOf="@+id/buttonFour"
        app:layout_constraintStart_toStartOf="@+id/buttonFour"
        app:layout_constraintTop_toBottomOf="@+id/buttonFour" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonTwo"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonTwoText"
        android:textSize="@dimen/calculator_digit_button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/buttonOne"
        app:layout_constraintEnd_toEndOf="@+id/buttonFive"
        app:layout_constraintStart_toStartOf="@+id/buttonFive"
        app:layout_constraintTop_toTopOf="@+id/buttonOne" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonThree"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonThreeText"
        android:textSize="@dimen/calculator_digit_button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/buttonTwo"
        app:layout_constraintEnd_toEndOf="@+id/buttonSix"
        app:layout_constraintStart_toStartOf="@+id/buttonSix"
        app:layout_constraintTop_toTopOf="@+id/buttonTwo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMinus"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonMinusText"
        android:textSize="@dimen/calculator_expression_button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/buttonThree"
        app:layout_constraintEnd_toEndOf="@+id/buttonMultiply"
        app:layout_constraintStart_toStartOf="@+id/buttonMultiply"
        app:layout_constraintTop_toTopOf="@+id/buttonThree" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAux"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonAuxText"
        android:textSize="@dimen/calculator_digit_button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/buttonMinus"
        app:layout_constraintEnd_toEndOf="@+id/buttonPowered"
        app:layout_constraintStart_toStartOf="@+id/buttonPowered"
        app:layout_constraintTop_toTopOf="@+id/buttonMinus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonZero"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/calculator_outer_margins"
        android:text="@string/buttonZeroText"
        android:textSize="@dimen/calculator_digit_button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonOne"
        app:layout_constraintStart_toStartOf="@+id/buttonOne"
        app:layout_constraintTop_toBottomOf="@+id/buttonOne" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPoint"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonPointText"
        android:textSize="@dimen/calculator_digit_button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/buttonZero"
        app:layout_constraintEnd_toEndOf="@+id/buttonTwo"
        app:layout_constraintStart_toStartOf="@+id/buttonTwo"
        app:layout_constraintTop_toTopOf="@+id/buttonZero" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPercent"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonPercentText"
        android:textSize="@dimen/calculator_expression_button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPoint"
        app:layout_constraintEnd_toEndOf="@+id/buttonThree"
        app:layout_constraintStart_toStartOf="@+id/buttonThree"
        app:layout_constraintTop_toTopOf="@+id/buttonPoint" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPlus"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonPlusText"
        android:textSize="@dimen/calculator_expression_button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPercent"
        app:layout_constraintEnd_toEndOf="@+id/buttonMinus"
        app:layout_constraintStart_toStartOf="@+id/buttonMinus"
        app:layout_constraintTop_toTopOf="@+id/buttonPercent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEquals"
        style="@style/CalculatorButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonEqualsText"
        android:textSize="@dimen/calculator_expression_button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPlus"
        app:layout_constraintEnd_toEndOf="@+id/buttonAux"
        app:layout_constraintStart_toStartOf="@+id/buttonAux"
        app:layout_constraintTop_toTopOf="@+id/buttonPlus" />


</androidx.constraintlayout.widget.ConstraintLayout>